# MorpionSolitaire

./: .gitignore  AI_generate.ipynb  AI_predict_1.ipynb  AI_train.ipynb  AI_train_avg.ipynb  AI_train_simple.ipynb  Allowed_move.ipynb  Counting_moves.ipynb  DeepLearningMS.py  Deep_Learning.ipynb  DisplayFile.py  Documentation.ipynb  Exploration.ipynb  Google_Colab_commands.md  MorpionSolitaire.py  One_allowed_move.ipynb  README.md  RandomExploration.py  Random_Exploration.ipynb  Simple_binary_problem.ipynb  Simple_binary_problem_avg_pool.ipynb  Simple_binary_problem_deeper.ipynb  Simple_binary_problem_deepest.ipynb  Simple_binary_problem_experiments-Copy1.ipynb  Simple_binary_problem_experiments.ipynb  documentation.ipynb  test_game_cross5.npy
.ipynb_checkpoints/: AI_generate-checkpoint.ipynb  AI_image-checkpoint.ipynb  AI_predict_1-checkpoint.ipynb  AI_predict_2-checkpoint.ipynb  AI_predict_count-checkpoint.ipynb  AI_train-Copy1-checkpoint.ipynb  AI_train-checkpoint.ipynb  AI_train_simple-checkpoint.ipynb  Counting_moves-Copy1-checkpoint.ipynb  Counting_moves-checkpoint.ipynb  Deep_Learning-checkpoint.ipynb  Documentation-checkpoint.ipynb  Exploration-checkpoint.ipynb  MS_examples-checkpoint.ipynb  One_allowed_move-checkpoint.ipynb  Play_models-checkpoint.ipynb  Random_Exploration-checkpoint.ipynb  Simple_binary_problem-checkpoint.ipynb  Simple_binary_problem-experiments-checkpoint.ipynb  Simple_binary_problem_deeper-checkpoint.ipynb  Simple_binary_problem_experiments-Copy1-checkpoint.ipynb  Simple_binary_problem_experiments-checkpoint.ipynb  documentation-checkpoint.ipynb  examples-checkpoint.ipynb
blog/: Part_1_Game.ipynb  Part_2_Data.ipynb  Part_2_Implementation.ipynb  Part_3_Binary.ipynb  Part_3_Binary_problem.ipynb  Part_3_Simple_problem.ipynb  Part_4_Counting.ipynb  Part_4_Learning_to_count.ipynb  Part_5_Playing_model.ipynb  howto.md  remove_hide.py  test.ipynb
blog/.ipynb_checkpoints/: Part_1_Game-checkpoint.ipynb  Part_2_Data-checkpoint.ipynb  Part_2_Implementation-checkpoint.ipynb  Part_3_Binary-checkpoint.ipynb  Part_3_Binary_problem-checkpoint.ipynb  Part_4_Counting-checkpoint.ipynb  Part_5_Playing_model-checkpoint.ipynb  test-checkpoint.ipynb
blog/Part_3_Binary_problem_images/: Democritus_architecture
blog/Part_4_Counting_images/: Descartes_architecture  Descartes_binary_archi
cpp/: CMakeLists.txt  PyMorpionSolitaire.ipynb  Statistics.ipynb
cpp/data/: cross4D_mc.npy  cross4D_nested.npy  cross4D_nested2.npy  cross4D_nested3.npy  cross4D_nested4.npy  cross4T_mc.npy  cross4T_nested.npy  cross4T_nested2.npy  cross4T_nested4.npy  cross5D_mc.npy  cross5D_nested.npy  cross5D_nested2.npy  cross5D_nested3.npy  cross5D_nested4.npy  cross5T_mc.npy  cross5T_nested.npy  cross5T_nested2.npy  cross5T_nested3.npy  cross5T_nested4.npy  highest_score.json  pipe5D_mc.npy  pipe5D_nested.npy  pipe5D_nested2.npy  pipe5D_nested4.npy  pipe5T_mc.npy  pipe5T_nested.npy  pipe5T_nested2.npy  pipe5T_nested4.npy  test_game.json
cpp/include/: Game.h  GraphGame.h  Grid.h  GridFootprint.h  GridLine.h  GridMove.h  GridPoint.h  Image.h  ImageMove.h  ImagePoint.h  Move.h  Node.h  Point.h
cpp/src/: Game.cpp  GraphGame.cpp  Grid.cpp  GridDTO.cpp  GridFootprint.cpp  GridLine.cpp  GridPoint.cpp  Image.cpp  ImagePoint.cpp  Point.cpp  PyMorpionSolitaire.cpp
cpp/tests/: GameTest.cpp  GraphGameTest.cpp
data/: best_grid.txt  distribution_0.npy  n_0.npy  rand_distribution.npy
data/run_0_cross/: n.npy  scores.npy
data/run_0_pipe/: n.npy  scores.npy
data/run_0_random/: n.npy  scores.npy
deeplearning/: Counting_moves.ipynb  DeepLearningMS.py  Exploration.ipynb  Generate_data.ipynb  Generate_data_MC.ipynb  Generate_data_fixed_N.ipynb  Generate_data_max_2.ipynb  Generate_data_max_3.ipynb  Generate_data_max_4.ipynb  Generate_data_max_N.ipynb  Simple_binary_problem.ipynb  Simple_binary_problem_avg_pool.ipynb  Simple_binary_problem_deeper.ipynb
deeplearning-diff/: Exploration.ipynb  Exploration_differential.ipynb  Generate_differential_data.ipynb
deeplearning-disjoint/: Exploration.ipynb  Generate_data.ipynb  Tensorboard.ipynb  Train.ipynb  Train.py
deeplearning-disjoint/models/: model-64-res-4.pt
deeplearning/exploration_data/: Descartes_0.0001.npy  Descartes_0.003.npy  Descartes_0.03.npy  Descartes_0.1.npy  Descartes_0.3.npy  Descartes_10.0.npy  Descartes_3.0.npy
deeplearning/models/: Bacon.pt  Bacon_old.pt  Democritus.pt  Descartes_binary.pt  Descartes_counting.pt  models.md
dotnet/: MorpionSolitaire.sln  MorpionSolitaire.sln.DotSettings  MorpionSolitaireWeb.sln  Statistics.ipynb
dotnet/MorpionSolitaire/: Game.cs  GameAction.cs  GameDto.cs  GameJson.cs  Grid.cs  GridAction.cs  GridCoordinates.cs  GridDot.cs  GridDto.cs  GridElement.cs  GridFootprint.cs  GridLine.cs  GridPoint.cs  Image.cs  ImageAction.cs  ImageCoordinates.cs  ImagePoint.cs  InitialCross.cs  MorpionSolitaire.csproj  Point.cs  Segment.cs  SvgDocument.cs
dotnet/MorpionSolitaireCLI/: Histogram.cs  MorpionSolitaireCLI.csproj  Program.cs  ProgressBar.cs  Sequence.cs  Timing.cs
dotnet/MorpionSolitaireGraph/: Branch.cs  GameBranch.cs  GameGraph.cs  GameLink.cs  GameNode.cs  MorpionSolitaireGraph.csproj  Node.cs
exploration_data/: Descartes_0.0001.npy  Descartes_0.001.npy  Descartes_0.01.npy  Descartes_1.0.npy  Descartes_10.0.npy  best_game_cross5.npy
models/: AI_predict_1_v1  AI_predict_1_v1.pkl  AI_predict_2_v1  AI_predict_count_v1.pkl  Democritus.pkl  Democritus.py  Descartes.pt  Descartes_1.pt  Descartes_basic.pt  Descartes_binary.pt  Descartes_improved.pt  _tmp.pth  model_0.pkl  test.pkl
python/: MorpionSolitaire.py  drawing-dynamic.html  drawing.html
random_exploration_data/: best_grid.npy  rand_expectation.npy
v1/: MorpionSolitaire.py  Tests.py
(+34 files in other folders)
